.provarCaches/00D5f000005vwGkEAI/objects/rstk__soorddmd__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_soorddmd</customHelpPage>
    <description>soorddmd__c</description>
    <fields>
        <fullName>rootstock__soorddmd_so_order_no__c</fullName>
        <formula>rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Alternate External ID</inlineHelpText>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>140</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_allocrequired__c</fullName>
        <formula>IF(
rstk__soorddmd_compicitem__r.rstk__icitem_allocpolind__c, rstk__soorddmd_compicitem__r.rstk__icitem_iccomcod__r.rstk__iccomcod_allocpol__c,
rstk__soorddmd_compicitem__r.rstk__icitem_allocpol__c
)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>formula_allocrequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__formula_defaultproject__c</fullName>
        <formula>rstk__soorddmd_invdiv__r.rstk__sydiv_dflthomeproj__c</formula>
        <inlineHelpText>Internal formula for constructing the associated field.</inlineHelpText>
        <label>Default Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__soorddmd_issproj__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__soorddmd_soline__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__soorddmd_compicitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_invdiv__c</fullName>
        <formula>CASESAFEID( rstk__soorddmd_compicitem__r.rstk__icitem_div__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Formula Inventory Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_respinv__c</fullName>
        <formula>rstk__soorddmd_compicitem__r.rstk__icitem_respinv__c</formula>
        <inlineHelpText>Internal formula for constructing the associated field.</inlineHelpText>
        <label>formula_respinv</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__soorddmd_compicitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos; &apos; +  rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_div__c + &apos; &apos; +  rstk__soorddmd_soline__r.rstk__soline_project__r.rstk__pjproj_proj__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_stampdimensions__c</fullName>
        <formula>!ISBLANK(IF(rstk__soorddmd_compicitem__r.rstk__icitem_dimvalind__c, 
rstk__soorddmd_compicitem__r.rstk__icitem_iccomcod__r.rstk__iccomcod_dimval__r.rstk__sydim_dimval__c, 
rstk__soorddmd_compicitem__r.rstk__icitem_dimval__r.rstk__sydim_dimval__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stamp Dimensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_aucost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The &quot;anticipated&quot; unit cost for configurable items, set from the RS Product record.</inlineHelpText>
        <label>Anticipated Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_autopoexclude__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When a Kit Product is set for Direct Purchase, if any of its components aren&apos;t set up for Direct Purchase, they will be excluded from Direct Purchases made when the Kit Product is added to a SO, indicated by this field being checked.</inlineHelpText>
        <label>Exclude from Automatic Purchase Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_compicitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the item number on the Sales Order Line. (PG)</description>
        <inlineHelpText>Item number of Kit Component</inlineHelpText>
        <label>Component Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Sales Order Demand</relationshipLabel>
        <relationshipName>soorddmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_compitem__c</fullName>
        <inlineHelpText>This is the Component Item Number on this Sales Order Line</inlineHelpText>
        <label>Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_condcd__c</fullName>
        <inlineHelpText>This is the Condition Code for this Sales Order Line</inlineHelpText>
        <label>condcd</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_dimvals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Dimension for this SO Demand</inlineHelpText>
        <label>Dimension Values</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>Sales Order Demand</relationshipLabel>
        <relationshipName>soorddmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_directpoqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The division is entered on the Sales Order. (PG)</description>
        <inlineHelpText>This is the Division associated with this Sales Order Line</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Sales Order Demand (Division)</relationshipLabel>
        <relationshipName>divsoorddmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_dmdsts__c</fullName>
        <description>Key values in this field are for MRP considerations only:

If this is a ‘1’ then MRP will not process this record

Note: There is a special option whereby the ICIXR record created will have a status of 2 (even though the SOORDDMD_DMDSTS is ‘1’). In this case MRP will process this record.

If this is a ‘2’ through ‘8’ then MRP will process this record

If this is a ‘9’ then MRP will ignore this record. (PG)</description>
        <inlineHelpText>This is the SO line Status.</inlineHelpText>
        <label>Demand Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_dmdsts_pl__c</fullName>
        <inlineHelpText>This is the SO line Status</inlineHelpText>
        <label>soorddmd_dmdsts_pl</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Planned</fullName>
                </value>
                <value>
                    <fullName>2-Firm</fullName>
                </value>
                <value>
                    <fullName>4-Ready for activity</fullName>
                </value>
                <value>
                    <fullName>5-Pick List records generated</fullName>
                </value>
                <value>
                    <fullName>7-Activity started</fullName>
                </value>
                <value>
                    <fullName>8-Receipts completed</fullName>
                </value>
                <value>
                    <fullName>9-Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_dtereqd__c</fullName>
        <description>This is the Required Date for this demand’s item to be shipped (and therefore from the Rootstock Manufacturing perspective is to be picked and issued to the sales order.) (PG)</description>
        <inlineHelpText>This is the Date required on this Sales Order Line</inlineHelpText>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_extantcost__c</fullName>
        <formula>rstk__soorddmd_aucost__c  * rstk__soorddmd_qtyper__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The extended anticipated unit cost for configurable items, which is the Anticipated Unit Cost times the Qty Per.</inlineHelpText>
        <label>Extended Anticipated Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_fixedqty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this component Quantity Per is fixed (not to be extended by the order Quantity). (PG)</description>
        <inlineHelpText>This is the Fixed Qty for the Sales Order Line Component</inlineHelpText>
        <label>Fixed Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_invdiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Inventory Division that this component will be fulfilled from, using the Inventory Division established on the components Product Master Inventory Division setting.</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Sales Order Demand (invdiv)</relationshipLabel>
        <relationshipName>invdivsoorddmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_invsite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Site associated with this Sales Order Line</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Sales Order Demand (invsite_ui)</relationshipLabel>
        <relationshipName>SO_Demand1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_invuom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field holds the unit of measure in which this item is inventoried. (PG)</description>
        <inlineHelpText>This is the Inventory Unit of Measure for the Item on this Sale Order Line.</inlineHelpText>
        <label>Unit of Measure</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>Sales Order Demand</relationshipLabel>
        <relationshipName>SO_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_issproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field only has applicability in a project control environment (SYDIV_PROJACT = ‘T’)

The SOORDDMD_ISSPROJ is set to the SOORDDMD_PROJ but can be overridden and set to the ‘home project’ (which is null). (PG)</description>
        <inlineHelpText>This is the Issue Project for this Sale Order Line</inlineHelpText>
        <label>Issue Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Order Demand (issproj)</relationshipLabel>
        <relationshipName>soorddmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_isswbs__c</fullName>
        <inlineHelpText>This is the WBS account associated with the Sales Order Line</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_itemrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is initialized to null.

Currently, there are no plans to track inventory by ‘item revision’ which was the intent of this field.

At the present time this is a hidden field. (PG)</description>
        <inlineHelpText>This is the Revision for this Sale Order Line Item</inlineHelpText>
        <label>Item Rev</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>Sales Order Demand</relationshipLabel>
        <relationshipName>SO_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_lne__c</fullName>
        <inlineHelpText>This is the Sales Order Line number</inlineHelpText>
        <label>LNE</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_nodims__c</fullName>
        <formula>rstk__soorddmd_compicitem__r.rstk__icitem_div__r.rstk__sydiv_cmpno__r.rstk__sycmp_nodims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suppress Dimension Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_noprint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this Sales Order Demand will not be printed on any related forms (SO Acknowledgment, Packing Slip, Shipper, SO Invoice).</inlineHelpText>
        <label>Suppress Print on Forms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ordno__c</fullName>
        <inlineHelpText>This is the Sales Order Number</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_poqty__c</fullName>
        <inlineHelpText>This is the Sum of PO Quantities for Direct purchases associated with this SO Line Demand.</inlineHelpText>
        <label>Direct Purchase Qty</label>
        <summarizedField>rstk__sodmdpo__c.rstk__sodmdpo_poqty__c</summarizedField>
        <summaryForeignKey>rstk__sodmdpo__c.rstk__sodmdpo_soorddmd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The unit price (per 1) for this component.  Optionally, the Sales Order Line price can be derived by summing the price of the components.  Kitted products will likely have multiple SOORDDMD records. (PG)</description>
        <inlineHelpText>This is the Price on this Sales Order Line</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_pricecc__c</fullName>
        <formula>IF( rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c , rstk__soorddmd_price__c,  IF( ISNULL(rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) ||  rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0, rstk__soorddmd_price__c, rstk__soorddmd_price__c * rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Price - Customer Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_pricehc__c</fullName>
        <formula>IF( rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_custcurrency__c ,  IF( ISNULL(rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c) ||  rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c = 0, rstk__soorddmd_price__c, rstk__soorddmd_price__c /rstk__soorddmd_soline__r.rstk__soline_sohdr__r.rstk__sohdr_currexchrate__c ), rstk__soorddmd_price__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Demand Price – Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field only has applicability in a project control environment (SYDIV_PROJACT = ‘T’).  (PG)</description>
        <inlineHelpText>This is the Project associated with this Sales Order Line</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Order Demand (proj_ui)</relationshipLabel>
        <relationshipName>SO_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <description>At the present time this is a hidden field. (PG)</description>
        <inlineHelpText>This  is the Quantity allocated on this Sales Order line</inlineHelpText>
        <label>Qty Allocated</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_qtyiss__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the quantity issued. 

Each time the SOORDDMDCST record is created then this field is updated with the SOORDDMDCST_QTYISS

Each time the SOORDDMDCST record’s SOORDDMDCST_QTYISS is increased, then this value is increased by the same amount

Each time the SOORDDMDCST record is delete then this field is decremented with the SOORDDMDCST_QTYISS

Each time the SOORDDMDCST record’s SOORDDMDCST_QTYISS is decreased, then this value is decreased by the same amount  (PG)</description>
        <inlineHelpText>This is the Quantity issued on this Sale Order Line</inlineHelpText>
        <label>Qty Issued</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <description>When the SOORDDMD is added which happens prior to any issues, this field is initialized to the SOORDDMD_QTYREQ

This is an important field because this is the field that MRP uses to determine the real demand for this Sales order Component.

As the SOORDDMD_QTYISS gets incremented, this field gets decremented by the same amount.

Likewise if the SOORDDMD_QTYISS gets decremented, this field gets incremented by the same amount.

This value can never be more than the SOORDDMD_QTYREQ and this value can never be less than zero. (PG)</description>
        <inlineHelpText>This is the Quantity still to be issued on this Sale Order Line.</inlineHelpText>
        <label>Qty Remaining</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_qtyper__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity per for this component (multiplied by the Order Line quantity ordered to get the Quantity Required). (PG)</description>
        <inlineHelpText>Quantity of Component on Kit.</inlineHelpText>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the Sales Order Line Quantity. (PG)</description>
        <inlineHelpText>Total quantity required.</inlineHelpText>
        <label>Qty Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is Site associated with the Sales Order Line</inlineHelpText>
        <label>site_ui</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Sales Order Demand (site_ui)</relationshipLabel>
        <relationshipName>SO_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_sohdr__c</fullName>
        <formula>rstk__soorddmd_soline__r.rstk__soline_sohdr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>soorddmd_sohdr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_soline__c</fullName>
        <description>This is Sales Order Line. (PG)</description>
        <inlineHelpText>Sales Order Line for this demand.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Sales Order Demand</relationshipLabel>
        <relationshipName>soorddmds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Unit Cost, Freight for the Sales Order Line</inlineHelpText>
        <label>ucstfrght</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As each issue occurs, this field is updated with the component’s unit labor cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTLAB 

In a weighted average cost system, this derived from the ‘weighted average’ of all of the SOORDDMDCST_UCSTLAB / SOORDDMDCST_QTYISS for the SOORDDMDCST records that pertain to this SOORDDMD (PG)</description>
        <inlineHelpText>This is the Standard Unit Labor Cost of the Product</inlineHelpText>
        <label>UCSTLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As each issue occurs, this field is updated with the component’s unit material cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTMTL 

In a weighted average cost system, this derived from the ‘weighted average’ of all of the SOORDDMDCST_UCSTMTL / SOORDDMDCST_QTYISS for the SOORDDMDCST records that pertain to this SOORDDMD (PG)</description>
        <inlineHelpText>This is the Standard Unit Material Cost of the Product</inlineHelpText>
        <label>UCSTMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As each issue occurs, this field is updated with the component’s unit overhead fringe cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTOHDFRNG 

In a weighted average cost system, this derived from the ‘weighted average’ of all of the SOORDDMDCST_UCSTOHDFRNG / SOORDDMDCST_QTYISS for the SOORDDMDCST records that pertain to this SOORDDMD (PG)</description>
        <inlineHelpText>This is the Standard Overhead Fringe Cost of the Product</inlineHelpText>
        <label>UCSTOHDFRNG</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As each issue occurs, this field is updated with the component’s unit overhead labor cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTOHDLAB 

In a weighted average cost system, this derived from the ‘weighted average’ of all of the SOORDDMDCST_UCSTOHDLAB / SOORDDMDCST_QTYISS for the SOORDDMDCST records that pertain to this SOORDDMD (PG)</description>
        <inlineHelpText>This is the Standard Unit Overhead Labor Cost of the Product</inlineHelpText>
        <label>UCSTOHDLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As each issue occurs, this field is updated with the component’s unit overhead machine cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTOHDMACH 

In a weighted average cost system, this derived from the ‘weighted average’ of all of the SOORDDMDCST_UCSTOHDMACH / SOORDDMDCST_QTYISS for the SOORDDMDCST records that pertain to this SOORDDMD (PG)</description>
        <inlineHelpText>This is the Standard Unit Machine Cost of the Product</inlineHelpText>
        <label>UCSTOHDMACH</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As each issue occurs, this field is updated with the component’s unit overhead material cost.

In a standard cost system, this is derived from ICITEMSTD_STDUCSTOHDMTL 

In a weighted average cost system, this derived from the ‘weighted average’ of all of the SOORDDMDCST_UCSTOHDMTL / SOORDDMDCST_QTYISS for the SOORDDMDCST records that pertain to this SOORDDMD (PG)</description>
        <inlineHelpText>This is the Standard Unit Overhead Material Cost of the Product</inlineHelpText>
        <label>UCSTOHDMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Unit Cost, Other Indirect Costs for the Sales Order Line</inlineHelpText>
        <label>ucstothlnd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As each issue occurs, this field is updated with the component’s unit subcontract labor cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTSUBLAB 

In a weighted average cost system, this derived from the ‘weighted average’ of all of the SOORDDMDCST_UCSTSUBLAB / SOORDDMDCST_QTYISS for the SOORDDMDCST records that pertain to this SOORDDMD (PG)</description>
        <inlineHelpText>This is the Standard Unit Subcontracted Labor Cost of the Item</inlineHelpText>
        <label>UCSTSUBLAB</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_ucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <description>As each issue occurs, this field is updated with the component’s unit subcontract material cost. 

In a standard cost system, this is derived from ICITEMSTD_STDUCSTSUBMTL 

In a weighted average cost system, this derived from the ‘weighted average’ of all of the SOORDDMDCST_UCSTSUBMTL / SOORDDMDCST_QTYISS for the SOORDDMDCST records that pertain to this SOORDDMD (PG)</description>
        <inlineHelpText>This is the Standard Unit Subcontracted Material Cost of the Item</inlineHelpText>
        <label>UCSTSUBMTL</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soorddmd_wbs__c</fullName>
        <inlineHelpText>This is the WBS for this Sales Order Line</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Demand</label>
    <listViews>
        <fullName>rstk__RS_Sales_Order_Demand</fullName>
        <columns>NAME</columns>
        <columns>rstk__soorddmd_soline__c</columns>
        <columns>rstk__soorddmd_compicitem__c</columns>
        <columns>rstk__soorddmd_qtyreq__c</columns>
        <columns>rstk__soorddmd_proj__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soorddmd_qtyalloc__c</columns>
        <columns>rstk__soorddmd_qtyiss__c</columns>
        <columns>rstk__soorddmd_qtyoutstdg__c</columns>
        <columns>rstk__soorddmd_qtyper__c</columns>
        <columns>rstk__soorddmd_price__c</columns>
        <columns>rstk__soorddmd_dmdsts__c</columns>
        <columns>rstk__soorddmd_dtereqd__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sales Order Demand</label>
    </listViews>
    <listViews>
        <fullName>rstk__Sales_Order_Demand</fullName>
        <columns>NAME</columns>
        <columns>rstk__soorddmd_soline__c</columns>
        <columns>rstk__soorddmd_compicitem__c</columns>
        <columns>rstk__soorddmd_issproj__c</columns>
        <columns>rstk__soorddmd_invdiv__c</columns>
        <columns>rstk__soorddmd_qtyreq__c</columns>
        <columns>rstk__soorddmd_qtyper__c</columns>
        <columns>rstk__soorddmd_price__c</columns>
        <columns>rstk__soorddmd_dmdsts__c</columns>
        <columns>rstk__soorddmd_dtereqd__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__externalid__c</field>
            <operation>contains</operation>
            <value>147,swd1</value>
        </filters>
        <label>Sales Order Demand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Sales_Order_Demand_Select</fullName>
        <columns>NAME</columns>
        <columns>rstk__soorddmd_soline__c</columns>
        <columns>rstk__soorddmd_compicitem__c</columns>
        <columns>rstk__soorddmd_div__c</columns>
        <columns>rstk__soorddmd_invdiv__c</columns>
        <columns>rstk__soorddmd_dmdsts__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soorddmd_issproj__c</columns>
        <columns>rstk__soorddmd_qtyreq__c</columns>
        <columns>rstk__soorddmd_qtyalloc__c</columns>
        <columns>rstk__soorddmd_qtyiss__c</columns>
        <columns>rstk__soorddmd_qtyoutstdg__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__soorddmd_qtyper__c</columns>
        <columns>rstk__soorddmd_price__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sales Order Demand - Select</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Sales_Order_Demand_Today</fullName>
        <columns>NAME</columns>
        <columns>rstk__soorddmd_soline__c</columns>
        <columns>rstk__soorddmd_compicitem__c</columns>
        <columns>rstk__soorddmd_issproj__c</columns>
        <columns>rstk__soorddmd_qtyreq__c</columns>
        <columns>rstk__soorddmd_qtyalloc__c</columns>
        <columns>rstk__soorddmd_qtyiss__c</columns>
        <columns>rstk__soorddmd_qtyoutstdg__c</columns>
        <columns>rstk__soorddmd_qtyper__c</columns>
        <columns>rstk__soorddmd_price__c</columns>
        <columns>rstk__soorddmd_dtereqd__c</columns>
        <columns>rstk__soorddmd_dmdsts__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>17494</value>
        </filters>
        <label>Sales Order Demand - Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__bcbcSales_Order_Demand</fullName>
        <columns>rstk__formula_invdiv__c</columns>
        <columns>NAME</columns>
        <columns>rstk__soorddmd_qtyalloc__c</columns>
        <columns>rstk__soorddmd_qtyiss__c</columns>
        <columns>rstk__soorddmd_qtyoutstdg__c</columns>
        <columns>rstk__soorddmd_soline__c</columns>
        <columns>rstk__soorddmd_qtyreq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soorddmd_compicitem__c</columns>
        <columns>rstk__soorddmd_issproj__c</columns>
        <columns>rstk__soorddmd_invdiv__c</columns>
        <columns>rstk__soorddmd_qtyper__c</columns>
        <columns>rstk__soorddmd_price__c</columns>
        <columns>rstk__soorddmd_dmdsts__c</columns>
        <columns>rstk__soorddmd_dtereqd__c</columns>
        <filterScope>Everything</filterScope>
        <label>bcbcSales Order Demand</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SOORDDMD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Demand</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__COMPITEM_NOT_NULL</fullName>
        <active>true</active>
        <description>Component Item cannot be null</description>
        <errorConditionFormula>rstk__soorddmd_compicitem__c == null</errorConditionFormula>
        <errorMessage>Component Item cannot be null</errorMessage>
    </validationRules>
</CustomObject>